# eth-paris-2023

./: .env.example  .gitignore  README.md  package-lock.json
baby_bundler/: Cargo.toml
baby_bundler/src/: main.rs
baby_bundler/src/bindings/: entrypointgoerli.rs  mod.rs
baby_bundler/src/bundler/: bundler.rs  mod.rs  server.rs
contracts/: .gitignore  foundry.toml  package-lock.json  package.json
contracts/contracts/: IntentFactory.sol
contracts/contracts/plugin/GatTx/: GatTx.sol  IGatTx.sol
contracts/contracts/plugin/LimitOrder/: ILimitOrder.sol  LimitOrder.sol
contracts/test/soulwallet/: ExecutionManager.t.sol
contracts/test/soulwallet/deploy/: direct.t.sol
contracts/test/soulwallet/plugins/: GatTx.t.sol
